# rgb-multisig-hub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  coverage.sh  openapi.yaml  package.json
.github/workflows/: build.yaml  format.yaml  lint.yaml  test.yaml
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20251201_150154_init_db.rs  main.rs
src/: auth.rs  error.rs  main.rs  routes.rs  startup.rs  utils.rs
src/database/: mod.rs
src/database/entities/: config.rs  cosigner.rs  cosigner_op_status.rs  mod.rs  next_address_index.rs  op_file.rs  operation.rs  prelude.rs  transfer_status.rs
src/test/: bump_address_indices.rs  get_current_address_indices.rs  get_file.rs  get_last_processed_op_idx.rs  get_operation_by_idx.rs  info.rs  mark_operation_processed.rs  mod.rs  post_operation.rs  respond_to_operation.rs
tests/: cli.rs
