[package]
name = "rgb-multisig-hub"
version = "0.1.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "Hub for RGB multisig operations"
exclude = ["migration"]

[workspace]
members = [".", "migration"]

[dependencies]
amplify = { version = "=4.8.1", default-features = false }
anyhow = "1.0.93"
axum = { version = "0.7.7", features = [
    "multipart",
] }
axum-extra = "0.9.4"
# axum-macros = "0.4.2"  # uncomment to use debug_handler
biscuit-auth = "6.0.0"
clap = { version = "4.5.20", features = [
    "derive",
] }
confy = { version = "2.0.0", default-features = false, features = [
    "toml_conf",
] }
hex = "0.4"
rgb-multisig-hub-migration = { path = "migration", version = "0.1.0" }
sha2 = "0.10"
sea-orm = { version = "1.1.19", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-query = "0.32.7"
serde = { version = "^1.0", features = [
    "derive",
] }
serde_json = "1.0"
time = { version = "0.3.44", default-features = false }
thiserror = "2.0"
tempfile = "3"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "time"
] }
tokio-util = { version = "0.7.12", features = [
    "io",
] }
tower-http = { version = "0.6.1", features = [
    "cors",
    "limit",
    "trace",
] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3"
uuid = { version = "1.11.0", default-features = false, features = [
    "v4",
] }

[dev-dependencies]
assert_cmd = "2.1"
bytes = "1.11.0"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
] }
futures-util = "0.3.31"
nix = { version = "0.29", features = ["signal", "process"] }
predicates = "3.1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "native-tls",
    "stream",
] }
serial_test = "3"
tracing-test = "0.2.5"
wait-timeout = "0.2"
