[package]
name = "rgb-multisig-hub-migration"
version = "0.1.0"
edition = "2024"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.19", default-features = false, features = [
    "cli",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
